--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -22,6 +22,7 @@
     "@primevue/auto-import-resolver": "^4.0.5",
     "@primevue/themes": "^4.0.5",
     "js-cookie": "^3.0.5",
+    "libphonenumber-js": "^1.11.7",
     "oh-vue-icons": "1.0.0-rc3",
     "parse": "^5.3.0",
     "pinia": "^2.1.7",
@@ -29,8 +30,10 @@
     "sweetalert2": "^11.12.4",
     "tailwindcss-primeui": "^0.3.4",
     "unplugin-vue-components": "^0.27.4",
+    "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
