--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "parseserver",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "parse-dashboard": "^5.3.0",
-    "parse-server": "^5.6.0",
-    "pino": "^9.0.0"
+    "parse-server": "^5.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -25,6 +24,7 @@
     "jsdoc": "^4.0.3",
     "nodemon": "^3.1.0",
     "parse": "^5.0.0",
+    "pino": "^9.4.0",
     "pino-pretty": "^11.0.0"
   }
 }
