--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -21,6 +21,7 @@
     "@heroicons/vue": "^2.1.5",
     "@primevue/auto-import-resolver": "^4.0.5",
     "@primevue/themes": "^4.0.5",
+    "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "libphonenumber-js": "^1.11.7",
     "oh-vue-icons": "1.0.0-rc3",
