delete prime vue and add shadcn

--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -19,18 +19,20 @@
     "@cloudinary/url-gen": "^1.20.0",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
-    "@primevue/auto-import-resolver": "^4.0.5",
-    "@primevue/themes": "^4.0.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "ky": "^1.7.2",
     "libphonenumber-js": "^1.11.7",
+    "lucide-vue-next": "^0.453.0",
     "oh-vue-icons": "1.0.0-rc3",
     "parse": "^5.3.0",
     "pinia": "^2.1.7",
-    "primevue": "^4.0.5",
+    "radix-vue": "^1.9.7",
     "sweetalert2": "^11.12.4",
-    "tailwindcss-primeui": "^0.3.4",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "unplugin-vue-components": "^0.27.4",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
